--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,30 @@
-set-option -g status-interval 5
-set-option -g automatic-rename on
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -ga terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "screen-256color"
+set-option -g focus-events on
+
+set-option -g status-bg colour240
+set-option -g status-fg colour255
+
+set-window-option -g window-status-style fg=magenta
+set-window-option -g window-status-style bg=default
+
+set-option -g default-command bash
+set -g status-left-length 85
+#set -g status-left "Hacking on#[fg=color135] #S"
+set -g status-right "%d %b %y"
 set-option -g automatic-rename-format '#{b:pane_current_path}'
+#set -g window-status-current-format "Hacking on#[fg=black,bold bg=default]│#[fg=colour135 bg=colour234]#W#[fg=black,bold bg=default]│"
+
+bind - split-window -v -c "#{pane_current_path}"
+
+bind-key b set-option status
+#bind -n C-m select-pane -L
+#bind -n C-c select-pane -D
+#bind -n C-c select-pane -U
+#bind -n C-m select-pane -R
+set -g mouse on
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g window-status-current-format "#[fg=black,bold bg=default]│#[fg=colour135 bg=colour234]#W#[fg=black,bold bg=default]│"
+set -g window-status-format ""
