--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,10 @@ bind-key b set-option status
 #bind -n C-c select-pane -U
 #bind -n C-m select-pane -R
 set -g mouse on
+#set -g default-terminal "xterm-256color"
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
+#set -g window-status-current-format "#[fg=black,bold bg=default]│#[fg=colour135 bg=colour234]#W#[fg=black,bold bg=default]│"
+set -g window-status-format ""
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g window-status-current-format "#[fg=black,bold bg=default]│#[fg=colour135 bg=colour234]#W#[fg=black,bold bg=default]│"
-set -g window-status-format ""
+set -g default-terminal "screen-256color"
